Fix local graph

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,6 +7,9 @@
     <div class="backlinks-container">
         {{partial "backlinks.html" .}}
     </div>
+    <div>
+        {{partial "graph.html" .}}
+    </div>
 </div>
 {{end}}
 
