--- a/layouts/partials/footerIndex.html
+++ b/layouts/partials/footerIndex.html
@@ -10,7 +10,9 @@
         <div class="backlinks-container">
             {{partial "backlinks.html" .}}
         </div>
-
+        <div>
+          {{partial "graph.html" .}}
+        </div>
       </div>
   {{end}}
 {{end}}
